fix: table columns expand align center (#701)
* fix: table columns expand align center

* update

--- a/src/styles/table.less
+++ b/src/styles/table.less
@@ -517,6 +517,12 @@
       justify-content: center;
     }
   }
+
+  td&-align-center{
+    .@{table-prefix}-icon-expand-plus, .@{table-prefix}-icon-expand-sub {
+      margin: 0 auto;
+    }
+  }
   
   td&-align-right, th&-align-right {
     text-align: right;
